# bridle

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yml
bridle/: __init__.py  agent.py  call.py  errors.py  primitives.py  runtime.py  schema.py  tool.py  trace.py  wrappers.py
bridle/_internal/: __init__.py  json_repair.py  return_tool.py  tool_loop.py
bridle/cache/: __init__.py  file.py  memory.py  redis.py
bridle/models/: __init__.py  anthropic.py  mock.py
examples/: brief_writer.py
tests/: test_agent.py  test_anthropic.py  test_branch.py  test_call.py  test_errors.py  test_loop.py  test_runtime.py  test_schema.py  test_smoke.py  test_step.py  test_tool.py  test_trace.py  test_wrappers.py
