[project]
name = "bridle-ai"
version = "0.1.1"
description = "Harness an agent into a deterministic program with typed I/O."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Studio Agentic" }]
keywords = ["llm", "agent", "anthropic", "claude", "structured-output"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.40",
    "typing-extensions>=4.10",
]

[project.urls]
Homepage = "https://github.com/heyagentpaul/bridle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridle"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "syrupy>=4.6",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.pyright]
include = ["bridle"]
exclude = ["**/__pycache__", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingTypeStubs = "none"
reportPrivateUsage = "none"
strictListInference = false
strictDictionaryInference = false
strictSetInference = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
